--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 	
 </head>
 <body>
-	<h1>Welcome come to here !</h1>
+	<div>
+		<h1>Please enter your name.</h1>
+		<input type="text" class="textclass">
+		<input type="button" class="btnclass" value="輸入">
+	</div>
 	
 
 </body>
