--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<h1>Please enter your name.</h1>
 		<input type="text" class="textclass">
 		<input type="button" class="btnclass" value="輸入">
-		<img src="1558675194.png">
+		<img src="test-info/1558675194.png">
 	</div>
 	
 
