--- a/howcafe/index.html
+++ b/howcafe/index.html
@@ -10,7 +10,7 @@
 <body>
 	
 	<div>
-		<img src="./images/test-info/1558675194.png">
+		<img src="../images/test-info/1558675194.png">
 		<h1>Please enter your name.</h1>
 		<input type="text" class="textclass">
 		<input type="button" class="btnclass" value="輸入">
